# pixcli

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  PHASE6_SUMMARY.md  README.md
.code-review-report/: SUMMARY.md
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md
.git.old/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git.old/logs/: HEAD
.git.old/logs/refs/heads/: main
.git.old/logs/refs/remotes/origin/: main
.git.old/refs/heads/: main
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github.bak/workflows/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.rust-review/: IMPROVEMENTS.md
.security-audit/: REPORT.md
HomebrewFormula/: pixcli.rb
crates/pix-brcode/: Cargo.toml
crates/pix-brcode/src/: decoder.rs  encoder.rs  error.rs  lib.rs  tlv.rs
crates/pix-config/: Cargo.toml
crates/pix-config/src/: lib.rs
crates/pix-core/: Cargo.toml
crates/pix-core/src/: crc16.rs  error.rs  lib.rs  pix_key.rs
crates/pix-efi/: Cargo.toml
crates/pix-efi/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  validate.rs
crates/pix-efi/tests/: mock_api_tests.rs  wiremock_provider_tests.rs
crates/pix-mcp/: Cargo.toml
crates/pix-mcp.bak/: Cargo.toml
crates/pix-mcp.bak/src/: config.rs  tools.rs
crates/pix-mcp/src/: config.rs  main.rs  server.rs
crates/pix-provider/: Cargo.toml
crates/pix-provider/src/: error.rs  lib.rs  types.rs
crates/pix-webhook-server/: Cargo.toml
crates/pix-webhook-server/src/: handlers.rs  lib.rs  main.rs
docs/: .gitignore  LAUNCH_CHECKLIST.md  demo.sh  package-lock.json  package.json  pnpm-lock.yaml
docs.root-owned/: pnpm-lock.yaml  tsconfig.json
docs.root-owned/app/: global.css
docs.root-owned/app/(home)/: page.tsx
docs.root-owned/content/docs/: index.mdx
docs.root-owned/content/docs/api/: pix-core.mdx  pix-provider.mdx
docs.root-owned/content/docs/cli/: charge.mdx  meta.json  overview.mdx  webhook.mdx
docs.root-owned/content/docs/getting-started/: configuration.mdx
docs.root-owned/content/docs/guides/: troubleshooting.mdx
docs.root-owned/content/docs/mcp/: meta.json  openclaw.mdx  overview.mdx
docs.root-owned/content/docs/webhooks/: deployment.mdx  events.mdx  meta.json
docs/app/: global.css  layout.tsx
docs/app/(home)/: page.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/: pix-logo.tsx
docs/content/docs/: index.mdx  meta.json
docs/content/docs/api/: meta.json  pix-config.mdx  pix-efi.mdx  pix-provider.mdx
docs/content/docs/cli/: balance.mdx  config.mdx  overview.mdx  pix.mdx  qr.mdx
docs/content/docs/getting-started/: configuration.mdx  first-qr-code.mdx  installation.mdx  meta.json
docs/content/docs/guides/: contributing.mdx  efi-sandbox.mdx  meta.json  production-setup.mdx  security.mdx  troubleshooting.mdx  why-efi.mdx
docs/content/docs/mcp/: claude-code.mdx  openclaw.mdx  overview.mdx
docs/content/docs/webhooks/: deployment.mdx  setup.mdx
docs/lib/: layout.shared.tsx
src/: client_factory.rs  config.rs  main.rs  output.rs
src/commands/: balance.rs  charge.rs  config_cmd.rs  mod.rs  pix_cmd.rs  qr.rs  webhook.rs
src/commands.bak/: charge.rs  config_cmd.rs  qr.rs  webhook.rs
tests/: output_tests.rs
tests-generated/: test_brcode_roundtrip.rs  test_config_credentials.rs  test_crc16_comprehensive.rs  test_efi_resilience.rs  test_efi_validate_extended.rs  test_mcp_integration.rs  test_pix_key_edge_cases.rs  test_webhook_security.rs
tests.bak/: output_tests.rs
