[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Felipe Orlando <fobsouza@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pixcli/pixcli"
description = "A CLI tool for Brazilian Pix payments"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Base64
base64 = "0.22"

# UUID
uuid = { version = "1", features = ["v4"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
pix-core = { path = "crates/pix-core" }
pix-brcode = { path = "crates/pix-brcode" }
pix-provider = { path = "crates/pix-provider" }
pix-efi = { path = "crates/pix-efi" }

[package]
name = "pixcli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pixli - Brazilian Pix payment CLI"

[[bin]]
name = "pixcli"
path = "src/main.rs"

[dependencies]
pix-core.workspace = true
pix-brcode.workspace = true
pix-provider.workspace = true
pix-efi.workspace = true
tokio.workspace = true
