[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Felipe Orlando <fobsouza@gmail.com>"]
license = "MIT"
repository = "https://github.com/pixcli/pixcli"
description = "A CLI tool for Brazilian Pix payments"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "string"] }
comfy-table = "7"
colored = "3"
dialoguer = "0.11"

# Config
directories = "6"

# Base64
base64 = "0.22"

# UUID
uuid = { version = "1", features = ["v4"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Property-based testing
proptest = "1"

# Testing
tempfile = "3"

# Internal crates
pix-core = { path = "crates/pix-core" }
pix-brcode = { path = "crates/pix-brcode" }
pix-provider = { path = "crates/pix-provider" }
pix-efi = { path = "crates/pix-efi" }

[package]
name = "pixcli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pixli - Brazilian Pix payment CLI"

[[bin]]
name = "pixcli"
path = "src/main.rs"

[dependencies]
pix-core.workspace = true
pix-brcode.workspace = true
pix-provider.workspace = true
pix-efi.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
comfy-table.workspace = true
colored.workspace = true
dialoguer.workspace = true
directories.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
