[package]
name = "pix-brcode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EMV BRCode encoder/decoder for Brazilian Pix QR codes"

[dependencies]
pix-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
