[package]
name = "pix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, validation, and CRC16 for Brazilian Pix payments"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
