[package]
name = "pix-efi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Efí (Gerencianet) Pix provider with OAuth2 + mTLS authentication"
readme = "../../README.md"

[dependencies]
pix-core.workspace = true
pix-provider.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
base64.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"
serde_json.workspace = true
tempfile.workspace = true
