[package]
name = "pix-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "MCP server for Pix payments — expose Pix tools to AI agents"
readme = "../../README.md"

[[bin]]
name = "pix-mcp"
path = "src/main.rs"

[dependencies]
pix-core = { workspace = true }
pix-brcode = { workspace = true }
pix-provider = { workspace = true }
pix-efi = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
