[package]
name = "pix-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Provider trait and error types for Pix payment providers"

[dependencies]
pix-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
