[package]
name = "pix-webhook-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Standalone webhook receiver for Pix payment notifications"
readme = "../../README.md"

[[bin]]
name = "pix-webhook-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
chrono.workspace = true
clap.workspace = true
anyhow.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
